# roboware

./: .gitignore  CMakeLists.txt  README.md
include/roboware/core/messages/: message.hpp  parser.hpp
src/core/messages/: parser.cpp
tests/: CMakeLists.txt  test_parser.cpp
tests/data/: test_parser.msg  test_parser.rmsg  test_parser.txt  test_parser_complete.rmsg  test_parser_version_1.rmsg  test_parser_version_2.msg
